# bias-variance-knots-plotly

./: README.md  knot_bias_variance.py  pyproject.toml
csv/: W_101knots.csv  W_11knots.csv  W_201knots.csv  W_4knots.csv  W_51knots.csv  W_6knots.csv
